# diversite_inclusion

./: .gitignore  README.md  pyproject.toml
data/processed/: EDF_effectifs_handi.csv  Fichier1.csv  Fichier2.csv  salaries-en-situation-handicap_entreprises-cibles.csv  salaries-en-situation-handicap_entreprises-cibles_valeurs-reelles.csv  toutes_entreprises_data_effectif_et_handicap.csv  toutes_entreprises_data_pourcentage_handicap.csv
data/raw/Auchan/: auchan_2022_6p-table-1.csv  auchan_2022_6p-table-2.csv  auchan_2022_6p-table-3.csv  auchan_2022_6p-table-4.csv  auchan_2022_6p-table-5.csv  auchan_2022_6p-table-6.csv
data/raw/CNP/: CNP-Assurances-Bilan-social-2023_3p-table-1.csv  CNP-Assurances-Bilan-social-2023_3p-table-2.csv  CNP-Assurances-Bilan-social-2023_3p-table-3.csv  CNP-Assurances-Bilan-social-2023_3p-table-4.csv  CNP-Assurances-Bilan-social-2023_3p-table-5.csv  CNP-Assurances-Bilan-social-2023_3p-table-6.csv  CNP-Assurances-Bilan-social-2023_3p-table-7.csv
data/raw/Carrefour/: DPEF 2023 Groupe Carrefour_3p-table-1.csv  DPEF 2023 Groupe Carrefour_3p-table-2.csv  DPEF 2023 Groupe Carrefour_3p-table-3.csv  DPEF_Carrefour_2022_3p-table-1.csv  DPEF_Carrefour_2022_3p-table-2.csv  DPEF_Carrefour_2022_3p-table-3.csv
data/raw/Decathlon/: 2021_FR_Déclaration_de_Performance_Extra_Financière_2021_9p-table-1.csv  (+79 more)
notebooks/: datEFD.ipynb  preprocess_data_dashboard1.ipynb  preprocess_data_dashboard_EDF.ipynb  preprocess_data_dashboard_toutes_entreprises.ipynb  repertoires_entreprises.ipynb  repertoires_entreprises_pipeline_complet.ipynb
(+16 files in other folders)
