[project]
name = "diversite-inclusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=1.20.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.7",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
]
