[project]
name = "diversite-inclusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=1.20.0",
    "jupyter>=1.1.1",
    "langchain-openai>=0.2.8",
    "langchain>=0.3.7",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
    "docling-core>=1.7.2",
    "python-dotenv>=1.0.1",
    "langchain-text-splitters>=0.3.2",
    "langchain-huggingface>=0.1.2",
    "langchain-milvus>=0.1.7",
    "langchain-ollama>=0.2.0",
]
